fakecoin/k8s/rabbitmq.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    component: rabbitmq
  name: rabbitmq
spec:
  selector:
    matchLabels:
      app: fakecoin
      component: rabbitmq
  replicas: 1
  template:
    metadata:
      labels:
        app: fakecoin
        component: rabbitmq
    spec:
      containers:
      - image: rabbitmq:3.6.14-management
        name: rabbitmq
        ports:
        - containerPort: 5672
        - containerPort: 15672
        volumeMounts:
        - mountPath: "/var/lib/rabbitmq"
          name: rabbitmq-volume
      volumes:
      - name: rabbitmq-volume
        persistentVolumeClaim:
          claimName: rabbitmq-pvc
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fakecoin
    component: rabbitmq
  name: rabbitmq
spec:
  ports:
  - name: msg
    port: 5672
    targetPort: 5672
  - name: management
    port: 15672
    targetPort: 15672
  selector:
    app: fakecoin
    component: rabbitmq
---
