fakecoin/k8s/server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    component: fakecoin-server
    app: fakecoin
  name: fakecoin-server
spec:
  selector:
    matchLabels:
      component: fakecoin-server
      app: fakecoin
  replicas: 1
  template:
    metadata:
      labels:
        component: fakecoin-server
        app: fakecoin
    spec:
      containers:
      - name: fakecoin-server
        image: tomverelst/fakecoin-server
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    component: fakecoin-server
    app: fakecoin
  name: fakecoin-server
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    component: fakecoin-server
    app: fakecoin
