fakecoin/k8s/ing.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fakecoin-ingress
  labels:
    app: fakecoin
    component: ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: fakecoin-ui
          servicePort: 3000
